--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>News</title>
-    
-    <script src="./js/script.js" defer></script>
+    <script src="./js/polyfill.min.js" defer></script>
+    <script src="./js/fetch.js" defer></script>
+    <script src="./js/babel-script.js" defer></script>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
