--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Main page</title>
-    <script src="/index.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.16/angular-resource.min.js"></script>
+    <script src="./src/index.js" defer></script>
   </head>
   
   <body>
-    <div id="root"></div>
+    <div id="root" ng-app="toDoApp">
+      <div ng-view>
+
+      </div>
+    </div>
   </body>
 </html>
